--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ pyasn1-modules==0.2.8
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
-pywebio==1.2.3
+pywebio
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.6
@@ -58,7 +58,6 @@ typing-extensions==3.7.4.3
 ua-parser==0.10.0
 urllib3==1.26.4
 user-agents==2.2.0
-versioned-hdf5==1.2.5
 Werkzeug==1.0.1
 wincertstore==0.2
 wrapt==1.12.1
